fix overflow on content

--- a/src/components/content/content.module.scss
+++ b/src/components/content/content.module.scss
@@ -12,7 +12,6 @@
 @include var.content-media {
   .content {
     height: 100vh;
-    overflow-y: hidden;
     * > section + section {
       margin-top: 0;
     }
